--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html {
 body {
     background: #DAD0C7;
     color: #514935;
+    maxwidth: 2000px;
     margin: 0;
     padding: 0;
     font-size: 1rem;
