--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ a.btnlight {
 
 .flexbox {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     column-gap: 1.5rem;
     row-gap: 1em;
 }
@@ -208,6 +208,13 @@ ul.inline li{
     height: 1.5rem;
     min-height: 20px;
     margin: 0 0.5em;
+}
+
+.fingering {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
 }
 
 table, table td, table th {
