--- a/style.css
+++ b/style.css
@@ -43,6 +43,19 @@ header {
     text-align: center;
 }
 
+.header {
+    font-size: x-large;
+    font-weight: bolder;
+    color: #514935;
+    text-align: center;
+    font-family: "Gill Sans";
+    font-size: 3rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 2rem auto 0;
+}
+
 section {
     margin: 3rem auto;
 }
@@ -68,25 +81,37 @@ p {
 }
 
 h1 {
-    text-align: center;
-    font-family: "Gill Sans";
-    font-size: 3rem;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    margin: 2rem auto 0;
+    font-size: x-large;
 }
 
 h2 {
-    color: #907E6E;
+    font-size: large;
 }
 
-h2, h3, h4 {
+h1, h2 {
     margin: 1em 0 0;
+}
+
+h3 {
+    font-size: medium;
+}
+
+h3 {
+    margin: 1rem 0 0;
 }
 
 p {
     margin: 1rem 0 0;
+}
+
+.acp {
+    margin: 0.5rem 0 0;
+}
+
+.ipa {
+    font-size: small;
+    color:#907E6E;
+    margin: 0.5em 0 0 0;
 }
 
 footer {
@@ -127,12 +152,19 @@ a.btnlight {
     background: #EDE8E3;
 }
 
-a.org {
+.link01 {
     display: block;
     color:#907E6E;
-    font-size: 0.8rem;
+    font-size: smaller;
     text-decoration: underline;
-    margin: 0.5rem 0 0;
+    margin: 0.4rem 0 0 0;
+}
+
+.link02 {
+    color:#514935;
+    font-size: medium;
+    text-decoration: underline;
+    margin: 2rem 0 0;
 }
 
 .brbtn {
@@ -192,6 +224,13 @@ a.org {
     margin: 0 1rem 0;
 }
 
+.cardtitle {
+    font-weight: bold;
+    font-size: x-large;
+    color: #907E6E;
+    margin: 1em 0 0;
+}
+
 .bar {
     display: flex;
     justify-content: center;
@@ -223,11 +262,23 @@ ul.inline li{
     margin: 0 0.5em;
 }
 
+.ind1 {
+    margin: 0.5rem 0 0 1em;
+}
+
 .fingering {
     width: 100%;
     height: 100%;
     -o-object-fit: contain;
        object-fit: contain;
+}
+
+.ref {
+    margin: 1rem 0 0 1rem;
+}
+
+.ref ::before {
+content: '>> '
 }
 
 table, table td, table th {
